# specs-c-libs

./: .gitignore  README.md  init.cmake  libs.cmake  specs-c-libs-config.cmake  specs-c-libs.cmake
MemoiInstrumenter/: CMakeLists.txt  LICENSE  README  README.md
MemoiInstrumenter/src/: CMakeLists.txt  MemoiInstrumenter.c  MemoiInstrumenter.h  main.c
MemoiInstrumenter/src/cJSON/: CMakeLists.txt  cJSON.c  cJSON.h
OdroidEnergyMonitor/: energymonitor.cpp  energymonitor.h  energymonitor_c.cpp  energymonitor_c.h  getnode.cpp  getnode.h  main.cpp
SpecsLogger/: CMakeLists.txt
SpecsLogger/include/: SpecsLogger.h
SpecsLogger/src/: SpecsLogger.cpp
SpecsLogger/test/: CMakeLists.txt
SpecsLogger/test/src/: main.cpp
SpecsRapl/: CMakeLists.txt
SpecsRapl/example/: example.c
SpecsRapl/include/: rapl.h  rapl_fs.h  rapl_sysfs.h
SpecsRapl/src/: rapl.c  rapl_fs.c  rapl_sysfs.c
